--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p>Wishing you a glorious happy birthday</p>
         <p>May this day bring you all the joy, successs, prosperity and everthing good a life can unfold</p>
         <p>May your dreams and everthing you wish for come to pass</p>
-        <p>Professor one, God bless you,enjoy your day but do not cut the cake without me</p>
+        <p>Professor Prince Baiden, Professor one, God richly bless you,enjoy your day but do not cut the cake without me</p>
         <p>I love so much</p>
     </div>
 </body>
